[gd_scene load_steps=12 format=2]

[ext_resource path="res://InputBox.gd" type="Script" id=1]
[ext_resource path="res://TypeTutorial.gd" type="Script" id=2]
[ext_resource path="res://Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/VeraMono.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://TextBox.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 145, 34.5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.0980392, 0.0980392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.117647, 0.0980392, 0.0980392, 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 5 )

[node name="TypeTutorial" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 101.0
margin_top = 182.0
margin_right = 851.0
margin_bottom = 349.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "What's your name:"
text = "What's your name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputBox" type="LineEdit" parent="."]
margin_left = 535.0
margin_top = 175.0
margin_right = 828.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="InputBox"]
position = Vector2( -3, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputBox/Area2D"]
position = Vector2( 148, 36.5 )
shape = SubResource( 2 )

[node name="Cursor" parent="." instance=ExtResource( 4 )]
position = Vector2( 494, 317 )

[node name="TextBox" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="TextboxContainer" type="MarginContainer" parent="TextBox"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -184.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextBox/TextboxContainer"]
margin_right = 924.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="TextBox/TextboxContainer"]
margin_right = 924.0
margin_bottom = 134.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextBox/TextboxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 908.0
margin_bottom = 118.0
custom_styles/panel = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextBox/TextboxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 908.0
margin_bottom = 118.0

[node name="Label" type="Label" parent="TextBox/TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 892.0
margin_bottom = 48.0
rect_min_size = Vector2( 892, 0 )
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = SubResource( 6 )
autowrap = true

[node name="Tween" type="Tween" parent="TextBox"]

[connection signal="text_entered" from="InputBox" to="." method="_on_InputBox_text_entered"]
[connection signal="area_entered" from="InputBox/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_all_completed" from="TextBox/Tween" to="TextBox" method="_on_Tween_tween_all_completed"]
